--- a/package.json
+++ b/package.json
@@ -4,20 +4,14 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "npx tsx server/index.ts",
+    "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "prestart": "npm run build",
-    "start": "npx tsx server/index.ts",
-    "db:push": "drizzle-kit push",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
-    "@neondatabase/serverless": "^1.0.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -49,37 +43,15 @@
     "@stripe/stripe-js": "^7.9.0",
     "@supabase/supabase-js": "^2.49.8",
     "@tanstack/react-query": "^5.56.2",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/multer": "^2.0.0",
-    "@types/pg": "^8.15.5",
     "@types/uuid": "^9.0.8",
-    "@types/ws": "^8.18.1",
-    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
-    "compression": "^1.8.1",
-    "concurrently": "^9.2.1",
-    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
-    "dotenv": "^17.2.2",
-    "drizzle-kit": "^0.31.4",
-    "drizzle-orm": "^0.44.5",
     "embla-carousel-react": "^8.3.0",
-    "express": "^5.1.0",
-    "express-rate-limit": "^8.1.0",
-    "helmet": "^8.1.0",
     "input-otp": "^1.2.4",
-    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.462.0",
-    "morgan": "^1.10.1",
-    "multer": "^2.0.2",
     "next-themes": "^0.3.0",
-    "nodemon": "^3.1.10",
-    "pg": "^8.16.3",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -89,13 +61,10 @@
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
-    "stripe": "^18.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "tsx": "^4.20.5",
     "uuid": "^11.1.0",
     "vaul": "^0.9.3",
-    "ws": "^8.18.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -110,7 +79,6 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "lovable-tagger": "^1.1.7",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
